--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -23,18 +23,19 @@
     "@angular/router": "^12.0.5",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@pdftron/webviewer": "^8.0.0",
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.1.0",
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
+    "jspdf": "^2.5.1",
     "lodash-es": "^4.17.15",
     "moment": "2.24.0",
     "moment-timezone": "0.5.33",
     "ngx-bootstrap": "^5.6.1",
     "ngx-pagination": "^5.0.0",
     "push.js": "1.0.12",
-    "@pdftron/webviewer": "^8.0.0",
     "rxjs": "^6.4.0",
     "sweetalert2": "^10.15.6",
     "ts-helpers": "^1.1.2",
