--- a/7.1.0/aspnet-core/src/CVRM.Core/CVRM.Core.csproj
+++ b/7.1.0/aspnet-core/src/CVRM.Core/CVRM.Core.csproj
@@ -19,4 +19,7 @@
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="7.1.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.4.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\CVRM.Entites\CVRM.Entites.csproj" />
+  </ItemGroup>
 </Project>
