Update pdf web view architures

--- a/7.1.0/aspnet-core/src/CVRM.Core/CVRM.Core.csproj
+++ b/7.1.0/aspnet-core/src/CVRM.Core/CVRM.Core.csproj
@@ -22,4 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\CVRM.Entites\CVRM.Entites.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CVRM\" />
+  </ItemGroup>
 </Project>
