--- a/7.1.0/aspnet-core/src/CVRM.Application/CVRM.Application.csproj
+++ b/7.1.0/aspnet-core/src/CVRM.Application/CVRM.Application.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CVRM.Core\CVRM.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CVRM\" />
+  </ItemGroup>
 </Project>
