Generate CRUD API for all Entity

--- a/7.1.0/aspnet-core/src/CVRM.Application/CVRM.Application.csproj
+++ b/7.1.0/aspnet-core/src/CVRM.Application/CVRM.Application.csproj
@@ -12,6 +12,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\CVRM.Entites\CVRM.Entites.csproj" />
     <ProjectReference Include="..\CVRM.Core\CVRM.Core.csproj" />
   </ItemGroup>
 </Project>
