--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@angular/animations": "^12.0.5",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "^12.0.5",
     "@angular/compiler": "^12.0.5",
     "@angular/core": "^12.0.5",
@@ -27,10 +28,12 @@
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.1.0",
+    "chart.js": "^3.1.1",
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
     "jspdf": "^2.5.1",
     "lodash-es": "^4.17.15",
+    "mdb-angular-ui-kit": "1.6.1",
     "moment": "2.24.0",
     "moment-timezone": "0.5.33",
     "ngx-bootstrap": "^5.6.1",
