--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^12.0.5",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-select/ng-select": "^8.1.1",
     "@pdftron/webviewer": "^8.0.0",
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
