--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -57,6 +57,7 @@
     "@types/lodash-es": "^4.17.3",
     "@types/moment-timezone": "^0.5.30",
     "@types/node": "^13.13.4",
+    "autoprefixer": "^10.4.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -66,8 +67,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ngx-tailwind": "3.0.0",
     "nswag": "^13.4.2",
+    "postcss": "^8.4.5",
     "protractor": "~7.0.0",
+    "tailwindcss": "^3.0.8",
     "ts-node": "^8.10.1",
     "tslint": "~6.1.0",
     "typescript": "4.2.4",
