--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
     "html-loader": "^3.1.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lodash-es": "^4.17.15",
     "moment": "2.24.0",
