--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -36,9 +36,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lodash-es": "^4.17.15",
-    "moment": "2.24.0",
+    "moment": "^2.29.3",
     "moment-timezone": "0.5.33",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-dynamic-content": "^3.1.6",
     "ngx-pagination": "^5.0.0",
     "pspdfkit": "^2022.2.1",
     "push.js": "1.0.12",
@@ -50,7 +51,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.5",
+    "@angular-devkit/build-angular": "^12.2.17",
     "@angular/cli": "^12.0.5",
     "@angular/compiler-cli": "^12.0.5",
     "@angularclass/hmr": "^2.1.3",
@@ -76,7 +77,7 @@
     "ts-node": "^8.10.1",
     "tslint": "~6.1.0",
     "typescript": "4.2.4",
-    "webpack-bundle-analyzer": "^3.7.0"
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "angular-cli": {}
 }
