--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser-dynamic": "^12.0.5",
     "@angular/router": "^12.0.5",
     "@aspnet/signalr": "^1.1.4",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-free": "^5.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-select/ng-select": "^8.1.1",
     "@pdftron/webviewer": "^8.0.0",
     "abp-ng2-module": "^6.2.0",
