--- a/7.1.0/aspnet-core/src/CVRM.Core/CVRM.Core.csproj
+++ b/7.1.0/aspnet-core/src/CVRM.Core/CVRM.Core.csproj
@@ -18,7 +18,8 @@
     <PackageReference Include="Abp.AutoMapper" Version="7.1.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="7.1.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.4.0" />
-    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="20.1.0.61" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="20.2.0.38" />
+    <PackageReference Include="Syncfusion.Pdf.Imaging.Net.Core" Version="20.2.0.38" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CVRM.Entites\CVRM.Entites.csproj" />
