--- a/7.1.0/angular/package.json
+++ b/7.1.0/angular/package.json
@@ -44,6 +44,7 @@
     "ngx-bootstrap": "^5.6.1",
     "ngx-dynamic-content": "^3.1.6",
     "ngx-pagination": "^5.0.0",
+    "ngx-spinner": "^12.0.0",
     "pspdfkit": "^2022.2.1",
     "push.js": "1.0.12",
     "rxjs": "^6.4.0",
